[package]
name = "vartyint"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
edition = "2018"
license = "AGPL-3.0"
description = "Read & Write varint encoded integers"
repository = "https://git.sr.ht/~ebel/vartyint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
