[package]
name = "vartyint"
version = "0.2.0"
authors = ["Amanda McCann <amanda@technomancy.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Read & Write varint encoded integers"
repository = "https://github.com/amandasaurus/vartyint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
